--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@compodium/nuxt": "0.1.0-beta.10",
+    "@nuxt/content": "^3.6.1",
     "@nuxt/eslint": "1.4.1",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "1.14.0",
