--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "1.14.0",
     "@nuxt/ui": "3.1.3",
+    "axios": "^1.10.0",
     "better-sqlite3": "^11.10.0",
+    "date-fns": "^4.1.0",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.5",
     "tailwindcss": "^4.1.10",
