--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "better-sqlite3": "^11.10.0",
     "date-fns": "^4.1.0",
     "eslint": "^9.29.0",
+    "github-markdown-css": "^5.8.1",
     "nuxt": "^3.17.5",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
